# eduinf4201ba2

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  Vagrantprov.sh
netkit_lab/: lab.conf
report/: algorithm.tex  exec.tex  introduction.tex  notes.md  report.tex  tools.tex  vagrant.tex
src/: TP-DIST-CL.c  TP-DIST.c  host_tools.c  host_tools.h  message.c  message.h  message_linked_list.c  message_linked_list.h  message_tools.c  message_tools.h  socket_tools.c  socket_tools.h
